# 4students--cross-qt-cheerp-painting

./: .gitignore  CMakeLists.txt  README.md  main.cpp  segments.pro  widget.cpp  widget.h
cheerpapplication/: segments.html  webmain.cpp
cheerpimplementation/: canvas.cpp  canvas.h  imagebuffer.cpp  imagebuffer.h
core/: canvas.cpp  canvas.h  color.cpp  color.h  imagebuffer.cpp  imagebuffer.h  inputbuffer.cpp  inputbuffer.h  paint.cpp  paint.h  point.h  scene.cpp  scene.h  segment.h
mock/: inputbuffer.cpp  inputbuffer.h  inputbuffer_.cpp
qtapplication/: main.cpp
qtimplementation/: canvas.cpp  canvas.h  imagebuffer.cpp  imagebuffer.h
